# pysunsynkweb

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
examples/: display_stats.py
src/pysunsynkweb/: __about__.py  client.py  inverter.py  model.py  session.py  settings_keys.py
src/sunsynk_web/: __about__.py  __init__.py  model.py
tests/: conftest.py  test_model.py  test_session.py
